New module for hw atm. functions: 1. accept to deposit amount to specific Cassette (Hundreds, Thousands) 2. withdraw needed amount by groups order by larger 3. show balance